--- a/homeworks/HW6/HW6_finished.ipynb
+++ b/homeworks/HW6/HW6_finished.ipynb
@@ -156,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class BankAccount():\n",
@@ -183,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "myaccount=BankAccount(\"zhaizhai\",AccountType.CHECKING)"
@@ -225,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class BankUser():\n",
@@ -407,8 +413,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 183,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def ATMSession(bankUser):\n",
@@ -420,6 +428,7 @@
     "                        4)Deposit\\\n",
     "                        5)Withdraw\")\n",
     "        if option1==\"1\":\n",
+    "            Interface()\n",
     "            return\n",
     "        option2=input(\"Enter Options:\\\n",
     "                        1)Checking\\\n",
@@ -427,9 +436,11 @@
     "        if option1==\"2\":\n",
     "            if option2==\"1\":\n",
     "                bankUser.addAccount(AccountType.CHECKING)\n",
+    "                Interface()\n",
     "                return\n",
     "            elif option2==\"2\":\n",
     "                bankUser.addAccount(AccountType.SAVINGS)\n",
+    "                Interface()\n",
     "                return\n",
     "            else:\n",
     "                print(\"no such account type\")\n",
@@ -437,9 +448,11 @@
     "        if option1==\"3\":\n",
     "            if option2==\"1\":\n",
     "                print(bankUser.getBalance(AccountType.CHECKING))\n",
+    "                Interface()\n",
     "                return\n",
     "            elif option2==\"2\":\n",
     "                print(bankUser.getBalance(AccountType.SAVINGS))\n",
+    "                Interface()\n",
     "                return\n",
     "            else:\n",
     "                print(\"no such account type\")\n",
@@ -449,9 +462,11 @@
     "            option3=input(\"Enter Interger Amount, Cannot be Negative:\")\n",
     "            if option2==\"1\":\n",
     "                bankUser.deposit(AccountType.CHECKING,int(option3))\n",
+    "                Interface()\n",
     "                return\n",
     "            elif option2==\"2\":\n",
     "                bankUser.deposit(AccountType.SAVINGS,int(option3))\n",
+    "                Interface()\n",
     "                return\n",
     "            else:\n",
     "                print(\"no such account type\")\n",
@@ -461,29 +476,43 @@
     "            option3=input(\"Enter Interger Amount, Cannot be Negative:\")\n",
     "            if option2==\"1\":\n",
     "                bankUser.withdraw(AccountType.CHECKING,int(option3))\n",
+    "                Interface()\n",
     "                return\n",
     "            elif option2==\"2\":\n",
     "                bankUser.withdraw(AccountType.SAVINGS,int(option3))\n",
+    "                Interface()\n",
     "                return\n",
     "            else:\n",
     "                print(\"no such account type\")\n",
     "                raise AttributeError(\"no such account type\")\n",
     "        print(\"no such operation\")\n",
     "        raise AttributeError(\"no such operation\")\n",
-    "        Interface()\n",
+    "       \n",
     "    return Interface"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Options:                        1)Exit                        2)Creat Account                        3)Check Balance                        4)Deposit                        5)Withdraw1\n"
+      "Enter Options:                        1)Exit                        2)Creat Account                        3)Check Balance                        4)Deposit                        5)Withdraw1\n",
+      "Enter Options:                        1)Exit                        2)Creat Account                        3)Check Balance                        4)Deposit                        5)Withdraw1\n",
+      "Enter Options:                        1)Exit                        2)Creat Account                        3)Check Balance                        4)Deposit                        5)Withdraw2\n",
+      "Enter Options:                        1)Checking                        2)Saving1\n",
+      "Enter Options:                        1)Exit                        2)Creat Account                        3)Check Balance                        4)Deposit                        5)Withdraw3\n",
+      "Enter Options:                        1)Checking                        2)Saving1\n",
+      "0\n",
+      "Enter Options:                        1)Exit                        2)Creat Account                        3)Check Balance                        4)Deposit                        5)Withdraw4\n",
+      "Enter Options:                        1)Checking                        2)Saving1\n",
+      "Enter Interger Amount, Cannot be Negative:100\n",
+      "Enter Options:                        1)Exit                        2)Creat Account                        3)Check Balance                        4)Deposit                        5)Withdraw3\n",
+      "Enter Options:                        1)Checking                        2)Saving1\n",
+      "100\n"
      ]
     }
    ],
@@ -718,7 +747,9 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Regression():\n",
@@ -751,7 +782,9 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class OLSRegression(Regression):\n",
@@ -788,7 +821,9 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X=[[2],[3]]\n",
@@ -979,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -995,22 +1030,23 @@
     {
      "data": {
       "text/plain": [
-       "array([[ -9.84392851e-02],\n",
-       "       [  6.84210066e-02],\n",
-       "       [ -2.65739156e-03],\n",
-       "       [  4.11222136e+00],\n",
-       "       [ -0.00000000e+00],\n",
-       "       [  5.32850225e-01],\n",
-       "       [  2.16152030e-03],\n",
-       "       [ -1.24108307e+00],\n",
-       "       [  2.88679457e-01],\n",
-       "       [ -1.03421629e-02],\n",
-       "       [ -1.37869347e+00],\n",
-       "       [  5.61700638e-03],\n",
-       "       [ -7.73870513e-01]])"
+       "array([[  6.73680060e+01],\n",
+       "       [ -1.13763918e-01],\n",
+       "       [  5.04899381e-02],\n",
+       "       [ -1.33731176e-01],\n",
+       "       [  6.24911107e+00],\n",
+       "       [ -2.60415652e+01],\n",
+       "       [  8.29884269e-01],\n",
+       "       [  3.42101634e-02],\n",
+       "       [ -1.63806600e+00],\n",
+       "       [  3.36799408e-01],\n",
+       "       [ -4.29562386e-03],\n",
+       "       [ -1.39206584e+00],\n",
+       "       [  5.90599542e-03],\n",
+       "       [ -7.21366944e-01]])"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1096,7 @@
     "    \n",
     "print(ols1_m,ridge1_m,lasso1_m)\n",
     "    \n",
-    "lasso1.get_params()    \n"
+    "ols1.get_params()    \n"
    ]
   },
   {
@@ -1075,7 +1111,9 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ols_r=[]\n",
@@ -1165,6 +1203,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
