--- a/homeworks/HW7/HW7.ipynb
+++ b/homeworks/HW7/HW7.ipynb
@@ -27,6 +27,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self,value=0):\n",
+    "        self.value=value\n",
+    "        self.next=None\n",
+    "        \n",
+    "class LinkedList:\n",
+    "    def __init__(self, head):\n",
+    "        self.head=Node(head)\n",
+    "    def __len__(self):\n",
+    "        point=self.head\n",
+    "        count=0\n",
+    "        while (point.next!=None):\n",
+    "            point=point.next\n",
+    "            count+=1\n",
+    "        return count\n",
+    "    \n",
+    "    def __getitem__(self,index):\n",
+    "        point=self.head\n",
+    "        count=index\n",
+    "        while (point.next!=None) and count!=0:\n",
+    "            point=point.next\n",
+    "            count-=1\n",
+    "        if (count!=0):\n",
+    "            raise ValueEroor(\"index exceeding the length of the list\")\n",
+    "        return point.value\n",
+    "    def __repr__(self):\n",
+    "        return \"LinkedList(self.head(%d))\"%self.head.value\n",
+    "    \n",
+    "    def insert_front(self,element):\n",
+    "        new_ele=Node(element)\n",
+    "        new_ele.next=self.head.next\n",
+    "        self.head.next=new_ele\n",
+    "    def insert_back(self,element):\n",
+    "        new_ele=Node(element)\n",
+    "        point=self.head\n",
+    "        while (point.next!=None):\n",
+    "            point=point.next\n",
+    "        point.next=new_ele\n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "ll=LinkedList(1)\n",
+    "for i in range(3):\n",
+    "    ll.insert_front(i*2)\n",
+    "    ll.insert_back(i*2+1)\n",
+    "len(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,6 +126,198 @@
     "3. If the node to be deleted has two children, replace the node to be deleted with the maximum value in the left subtree.  Finally, delete the node with the maximum value in the left-subtree.\n",
     "\n",
     "`getValues(self. depth)`: Return a list of the entire row of nodes at the specified depth with `None` at the index if there is no value in the tree. The length of the list should therefore be $2^{\\text{depth}}$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class treenode():\n",
+    "    def __init__(self,value):\n",
+    "        self.value=value\n",
+    "        self.left=None\n",
+    "        self.right=None\n",
+    "        self.father=None\n",
+    "    def __repr__(self):\n",
+    "        return str(self.value)\n",
+    "    \n",
+    "class BinaryTree:\n",
+    "    def __init__(self):\n",
+    "        self.root=None\n",
+    "    def insert(self,val):\n",
+    "        newnode=treenode(val)\n",
+    "        if self.root==None:\n",
+    "            self.root=newnode\n",
+    "            return\n",
+    "        point=self.root\n",
+    "        while 1!=0:\n",
+    "            if point.value>val:\n",
+    "                if point.left!=None:\n",
+    "                    point=point.left\n",
+    "                else:\n",
+    "                    point.left=newnode\n",
+    "                    newnode.father=point\n",
+    "                    return\n",
+    "            if point.value<val:\n",
+    "                if point.right!=None:\n",
+    "                    point=point.right\n",
+    "                else:\n",
+    "                    point.right=newnode\n",
+    "                    newnode.father=point\n",
+    "                    return\n",
+    "            if point.value==val:\n",
+    "                raise ValueError(\"inserted value already there\")\n",
+    "\n",
+    "    def remove(self,val):\n",
+    "        point=self.root\n",
+    "        \n",
+    "        while point!=None:\n",
+    "            if point.value==val:\n",
+    "                del_point=point\n",
+    "                break\n",
+    "            else:\n",
+    "                if point.value>val:\n",
+    "                    \n",
+    "                    if point.left!=None:\n",
+    "                        currentroad=0\n",
+    "                        point=point.left\n",
+    "                    else:\n",
+    "                        raise ValueError(\"value not found\")\n",
+    "                else:\n",
+    "                    if point.right!=None:\n",
+    "                        currentroad=1\n",
+    "                        point=point.right\n",
+    "                    else:\n",
+    "                        raise ValueError(\"value not found\")\n",
+    "        if del_point.left==None:\n",
+    "            if del_point.father!=None:\n",
+    "                if currentroad==0:\n",
+    "                    del_point.father.left=del_point.right\n",
+    "                    if del_point.right!=None:\n",
+    "                        del_point.right.father=del_point.father\n",
+    "                elif currentroad==1:\n",
+    "                    del_point.father.right=del_point.right\n",
+    "                    if del_point.right!=None:\n",
+    "                        del_point.right.father=del_point.father\n",
+    "            else:\n",
+    "                if currentroad==0:\n",
+    "                    self.root=del_point.right\n",
+    "                elif currentroad==1:\n",
+    "                    self.root=del_point.right\n",
+    "            \n",
+    "        else:\n",
+    "            point2=del_point.left\n",
+    "            if point2.right==None:\n",
+    "                if del_point.father!=None:\n",
+    "                    point2.father=del_point.father\n",
+    "                    point2.right=del_point.right\n",
+    "                    if currentroad==0:\n",
+    "                        del_point.father.left=point2\n",
+    "                    elif currentroad==1:\n",
+    "                        del_point.father.right=point2\n",
+    "                else:\n",
+    "                    self.root=point2\n",
+    "                    point2.right=del_point.right\n",
+    "                    point2.left=del_point.left\n",
+    "            else:\n",
+    "                while point2.right!=None:\n",
+    "                    point2=point2.right\n",
+    "               \n",
+    "                if point2.left!=None:\n",
+    "                    point2.father.right=point2.left\n",
+    "                    point2.left.father=point2.father\n",
+    "                if del_point.father!=None:\n",
+    "                    if currentroad==0:\n",
+    "                        del_point.father.left=point2\n",
+    "                        del_point.right.father=del_point.father\n",
+    "                    elif currentroad==1:\n",
+    "                        del_point.father.right=point2\n",
+    "                        del_point.right.father=del_point.father\n",
+    "                    point2.father=del_point.father\n",
+    "                    point2.right=del_point.right\n",
+    "                    point2.left=del_point.left\n",
+    "                else:\n",
+    "                    self.root=point2\n",
+    "                    point2.right=del_point.right\n",
+    "                    point2.left=del_point.left\n",
+    "                return\n",
+    "            \n",
+    "        \n",
+    "    def getValues(self, depth):\n",
+    "        point=self.root\n",
+    "        father_list=[self.root]\n",
+    "        child_list=[]\n",
+    "        for i in range(depth):\n",
+    "            for node in father_list:          \n",
+    "                if node!=None:\n",
+    "                    child_list.append(node.left)\n",
+    "                    child_list.append(node.right)\n",
+    "                else: \n",
+    "                    child_list.append(None)\n",
+    "                    child_list.append(None)\n",
+    "            father_list=child_list.copy()\n",
+    "            child_list=[]\n",
+    "        return(father_list)\n",
+    "        \n",
+    "       \n",
+    "            \n",
+    "            \n",
+    "    def __len__(self):\n",
+    "        \n",
+    "        point=self.root\n",
+    "        if self.root!=None:\n",
+    "            father_list=[self.root]\n",
+    "        child_list=[]\n",
+    "        depth=0\n",
+    "        while len(father_list)!=0:\n",
+    "            depth+=1\n",
+    "            for node in father_list:\n",
+    "                if node!=None:\n",
+    "                    if node.left!=None:\n",
+    "                        child_list.append(node.left)\n",
+    "                    if node.right!=None:\n",
+    "                        child_list.append(node.right)\n",
+    "    \n",
+    "            father_list=child_list.copy()\n",
+    "            child_list=[]\n",
+    "        return depth\n",
+    "\n",
+    "\n",
+    "            \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Height of binary tree is 4.\n",
+      "\n",
+      "Level 0 values: [20]\n",
+      "Level 1 values: [10, None]\n",
+      "Level 2 values: [3, 17, None, None]\n",
+      "Level 3 values: [0, None, 14, None, None, None, None, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bt = BinaryTree()\n",
+    "arr = [20, 10, 17, 14, 3, 0]\n",
+    "for i in arr:\n",
+    "    bt.insert(i)\n",
+    "\n",
+    "\n",
+    "print(\"Height of binary tree is {}.\\n\".format(len(bt)))\n",
+    "for i in range(len(bt)):\n",
+    "    print(\"Level {0} values: {1}\".format(i, bt.getValues(i)))"
    ]
   },
   {
