--- a/homeworks/HW7/HW7.ipynb
+++ b/homeworks/HW7/HW7.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +204,10 @@
     "            else:\n",
     "                if currentroad==0:\n",
     "                    self.root=del_point.right\n",
+    "                    self.root.father=None\n",
     "                elif currentroad==1:\n",
     "                    self.root=del_point.right\n",
+    "                    self.root.father=None\n",
     "            \n",
     "        else:\n",
     "            point2=del_point.left\n",
@@ -219,6 +221,7 @@
     "                        del_point.father.right=point2\n",
     "                else:\n",
     "                    self.root=point2\n",
+    "                    self.root.father=None\n",
     "                    point2.right=del_point.right\n",
     "                    point2.left=del_point.left\n",
     "            else:\n",
@@ -240,6 +243,7 @@
     "                    point2.left=del_point.left\n",
     "                else:\n",
     "                    self.root=point2\n",
+    "                    self.root.father=None\n",
     "                    point2.right=del_point.right\n",
     "                    point2.left=del_point.left\n",
     "                return\n",
@@ -292,27 +296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Height of binary tree is 4.\n",
-      "\n",
-      "Level 0 values: [20]\n",
-      "Level 1 values: [10, None]\n",
-      "Level 2 values: [3, 17, None, None]\n",
-      "Level 3 values: [0, None, 14, None, None, None, None, None]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bt = BinaryTree()\n",
     "arr = [20, 10, 17, 14, 3, 0]\n",
     "for i in arr:\n",
     "    bt.insert(i)\n",
+    "for i in arr:\n",
+    "    print(i)\n",
+    "    bt.remove(i)\n",
+    "    for j in range(len(bt)):\n",
+    "        print(\"Level {0} values: {1}\".format(j, bt.getValues(j)))\n",
     "\n",
     "\n",
     "print(\"Height of binary tree is {}.\\n\".format(len(bt)))\n",
