--- a/lectures/L14/L14.ipynb
+++ b/lectures/L14/L14.ipynb
@@ -616,6 +616,49 @@
     "## Lecture Exercise\n",
     "Create a `Sentence` iterator class that uses a generator expression.  You will write the generator expression in the `__iter__` special method.  Note that the generator automatically gets `__next__`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Sentence:\n",
+    "    def __init__(self,sentence):\n",
+    "        self.sentence=sentence\n",
+    "        self.words=sentence.split\n",
+    "    def generator(self):\n",
+    "        for i in range(len(self.words)):\n",
+    "            yield self.words[i]\n",
+    "            \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = Sentence(\"Dogs will save the world and cats will eat it.\")\n",
+    "\n",
+    "for item in a:\n",
+    "    print(item)\n",
+    "print(\"\\n\")\n",
+    "it = iter(a) # it is an iterator\n",
+    "while True:\n",
+    "    try:\n",
+    "        nextval = next(it)\n",
+    "        print(nextval)\n",
+    "    except StopIteration:\n",
+    "        del it\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
