--- a/lectures/L14/L14.ipynb
+++ b/lectures/L14/L14.ipynb
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -628,7 +628,7 @@
     "class Sentence:\n",
     "    def __init__(self,sentence):\n",
     "        self.sentence=sentence\n",
-    "        self.words=sentence.split\n",
+    "        self.words=sentence.split()\n",
     "    def generator(self):\n",
     "        for i in range(len(self.words)):\n",
     "            yield self.words[i]\n",
@@ -639,26 +639,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dogs\n",
+      "will\n",
+      "save\n",
+      "the\n",
+      "world\n",
+      "and\n",
+      "cats\n",
+      "will\n",
+      "eat\n",
+      "it.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Sentence(\"Dogs will save the world and cats will eat it.\")\n",
+    "\n",
+    "\n",
+    "for item in a.generator():\n",
+    "    print(item)\n",
+    "print(\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "a = Sentence(\"Dogs will save the world and cats will eat it.\")\n",
-    "\n",
-    "for item in a:\n",
-    "    print(item)\n",
-    "print(\"\\n\")\n",
-    "it = iter(a) # it is an iterator\n",
-    "while True:\n",
-    "    try:\n",
-    "        nextval = next(it)\n",
-    "        print(nextval)\n",
-    "    except StopIteration:\n",
-    "        del it\n",
-    "        break"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
