final change on homework8

--- a/homeworks/HW8/HW8.ipynb
+++ b/homeworks/HW8/HW8.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -225,7 +225,7 @@
     "        self.tree=bt\n",
     "        self.type=Ttype\n",
     "    def changeTraversalType(self,Ttype):\n",
-    "        sefl.type=Type\n",
+    "        sefl.type=Ttype\n",
     "    def __iter__(self):\n",
     "        if self.type==DFSTraversalTypes.PREORDER:\n",
     "            return DFSTraversalInterator_pre(self.tree)\n",
@@ -38260,7 +38260,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m1.load_data(w)\n",
