--- a/lectures/L14/L14.ipynb
+++ b/lectures/L14/L14.ipynb
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -629,9 +629,11 @@
     "    def __init__(self,sentence):\n",
     "        self.sentence=sentence\n",
     "        self.words=sentence.split()\n",
-    "    def generator(self):\n",
+    "    def __iter__(self):\n",
     "        for i in range(len(self.words)):\n",
     "            yield self.words[i]\n",
+    "    def __repr__(self):\n",
+    "        return 'Sentence(%s)' % reprlib.repr(self.words)\n",
     "            \n",
     "        \n",
     "        "
@@ -639,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +667,7 @@
     "a = Sentence(\"Dogs will save the world and cats will eat it.\")\n",
     "\n",
     "\n",
-    "for item in a.generator():\n",
+    "for item in a:\n",
     "    print(item)\n",
     "print(\"\\n\")\n"
    ]
