--- a/lectures/L15/L15.ipynb
+++ b/lectures/L15/L15.ipynb
@@ -768,6 +768,18 @@
     "Travis Oliphant, as quoted in Fluent:\n",
     ">A memoryview is essentially a generalized NumPy array structure in Python itself (without the math). It allows you to share memory between data-structures (things like PIL images, SQLlite databases, NumPy arrays, etc.) without first copying. This is very important for large data sets."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "collectedIntervals = [[10,15], [3,4], [7,9]]\n",
+    "desiredInterval = [1,12]"
+   ]
   }
  ],
  "metadata": {
