--- a/lectures/L8/L8.ipynb
+++ b/lectures/L8/L8.ipynb
@@ -38,6 +38,126 @@
     "| $x_{i}$                   | Concentration of specie $i$ |\n",
     "| $k_{j}$                   | Reaction rate coefficient for reaction $j$ |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0**0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Solution(object):\n",
+    "    def lengthOfLongestSubstring(self, s):\n",
+    "        \"\"\"\n",
+    "        :type s: str\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        import numpy as np\n",
+    "        str_len=np.zeros(len(s))\n",
+    "        dic=dict(zip(string.ascii_lowercase,np.zeros(26)))\n",
+    "        print(dic)\n",
+    "        if s==\"\":\n",
+    "            return 0\n",
+    "        pos=0\n",
+    "        str_len[0]=1\n",
+    "        for ele in s:\n",
+    "            if pos!=0:\n",
+    "                str_len[pos]=min(pos-dic[ele],str_len[pos-1]+1)\n",
+    "            dic[ele]=pos\n",
+    "            pos+=1\n",
+    "        \n",
+    "        return str_len.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def longestPalindrome( s):\n",
+    "    \"\"\"\n",
+    "    :type s: str\n",
+    "    :rtype: str\n",
+    "    \"\"\"\n",
+    "    if len(s)==0:\n",
+    "        return 0\n",
+    "    maxLen=1\n",
+    "    start=0\n",
+    "    for i in range(len(s)):\n",
+    "        if i-maxLen-1>=0 and s[i-maxLen-1:i+1]==s[i-maxLen-1:i+1][::-1]:\n",
+    "            start=i-maxLen-1\n",
+    "            maxLen+=2\n",
+    "            continue\n",
+    "        if i-maxLen>=0 and s[i-maxLen:i+1]==s[i-maxLen:i+1][::-1]:\n",
+    "            start=i-maxLen\n",
+    "            maxLen+=1\n",
+    "        print(start)\n",
+    "\n",
+    "    return s[start:start+maxLen]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'cb'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longestPalindrome(\"cbba\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
