--- a/lectures/L18/L18.ipynb
+++ b/lectures/L18/L18.ipynb
@@ -1290,220 +1290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>middle_init</th>\n",
-       "      <th>party</th>\n",
-       "      <th>full_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16</td>\n",
-       "      <td>Mike</td>\n",
-       "      <td>Huckabee</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>Huckabee, Mike</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20</td>\n",
-       "      <td>Barack</td>\n",
-       "      <td>Obama</td>\n",
-       "      <td></td>\n",
-       "      <td>D</td>\n",
-       "      <td>Obama, Barack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>22</td>\n",
-       "      <td>Rudolph</td>\n",
-       "      <td>Giuliani</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>Giuliani, Rudolph</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>24</td>\n",
-       "      <td>Mike</td>\n",
-       "      <td>Gravel</td>\n",
-       "      <td></td>\n",
-       "      <td>D</td>\n",
-       "      <td>Gravel, Mike</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>26</td>\n",
-       "      <td>John</td>\n",
-       "      <td>Edwards</td>\n",
-       "      <td></td>\n",
-       "      <td>D</td>\n",
-       "      <td>Edwards, John</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>29</td>\n",
-       "      <td>Bill</td>\n",
-       "      <td>Richardson</td>\n",
-       "      <td></td>\n",
-       "      <td>D</td>\n",
-       "      <td>Richardson, Bill</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>30</td>\n",
-       "      <td>Duncan</td>\n",
-       "      <td>Hunter</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>Hunter, Duncan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>31</td>\n",
-       "      <td>Dennis</td>\n",
-       "      <td>Kucinich</td>\n",
-       "      <td></td>\n",
-       "      <td>D</td>\n",
-       "      <td>Kucinich, Dennis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>32</td>\n",
-       "      <td>Ron</td>\n",
-       "      <td>Paul</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>Paul, Ron</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>33</td>\n",
-       "      <td>Joseph</td>\n",
-       "      <td>Biden</td>\n",
-       "      <td></td>\n",
-       "      <td>D</td>\n",
-       "      <td>Biden, Joseph</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>34</td>\n",
-       "      <td>Hillary</td>\n",
-       "      <td>Clinton</td>\n",
-       "      <td>R.</td>\n",
-       "      <td>D</td>\n",
-       "      <td>Clinton, Hillary</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Mitt</td>\n",
-       "      <td>Romney</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>Romney, Mitt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>36</td>\n",
-       "      <td>Samuel</td>\n",
-       "      <td>Brownback</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>Brownback, Samuel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>37</td>\n",
-       "      <td>John</td>\n",
-       "      <td>McCain</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>McCain, John</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>38</td>\n",
-       "      <td>Tom</td>\n",
-       "      <td>Tancredo</td>\n",
-       "      <td></td>\n",
-       "      <td>R</td>\n",
-       "      <td>Tancredo, Tom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>39</td>\n",
-       "      <td>Christopher</td>\n",
-       "      <td>Dodd</td>\n",
-       "      <td>J.</td>\n",
-       "      <td>D</td>\n",
-       "      <td>Dodd, Christopher</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>41</td>\n",
-       "      <td>Fred</td>\n",
-       "      <td>Thompson</td>\n",
-       "      <td>D.</td>\n",
-       "      <td>R</td>\n",
-       "      <td>Thompson, Fred</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    id   first_name   last_name middle_init party          full_name\n",
-       "0   16         Mike    Huckabee                 R     Huckabee, Mike\n",
-       "1   20       Barack       Obama                 D      Obama, Barack\n",
-       "2   22      Rudolph    Giuliani                 R  Giuliani, Rudolph\n",
-       "3   24         Mike      Gravel                 D       Gravel, Mike\n",
-       "4   26         John     Edwards                 D      Edwards, John\n",
-       "5   29         Bill  Richardson                 D   Richardson, Bill\n",
-       "6   30       Duncan      Hunter                 R     Hunter, Duncan\n",
-       "7   31       Dennis    Kucinich                 D   Kucinich, Dennis\n",
-       "8   32          Ron        Paul                 R          Paul, Ron\n",
-       "9   33       Joseph       Biden                 D      Biden, Joseph\n",
-       "10  34      Hillary     Clinton          R.     D   Clinton, Hillary\n",
-       "11  35         Mitt      Romney                 R       Romney, Mitt\n",
-       "12  36       Samuel   Brownback                 R  Brownback, Samuel\n",
-       "13  37         John      McCain                 R       McCain, John\n",
-       "14  38          Tom    Tancredo                 R      Tancredo, Tom\n",
-       "15  39  Christopher        Dodd          J.     D  Dodd, Christopher\n",
-       "16  41         Fred    Thompson          D.     R     Thompson, Fred"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cursor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-95eb2cea0343>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcandidate_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PRAGMA table_info(contributors)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# regenerate columns with full_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mquery\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'''SELECT id, last_name, first_name FROM candidates'''\u001b[0m \u001b[0;31m# Select a few columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfull_name_and_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\", \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mattr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# List of tuples: (full_name, id)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mupdate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'''UPDATE candidates SET full_name = ? WHERE id = ?'''\u001b[0m \u001b[0;31m# Update the table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cursor' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1772,78 +1571,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>middle_name</th>\n",
-       "      <th>street_1</th>\n",
-       "      <th>street_2</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "      <th>zip</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>date</th>\n",
-       "      <th>candidate_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>31</td>\n",
-       "      <td>Buckel</td>\n",
-       "      <td>Linda</td>\n",
-       "      <td></td>\n",
-       "      <td>PO Box 683130</td>\n",
-       "      <td></td>\n",
-       "      <td>Park City</td>\n",
-       "      <td>UT</td>\n",
-       "      <td>840683130</td>\n",
-       "      <td>4600.0</td>\n",
-       "      <td>2007-08-14</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id last_name first_name middle_name       street_1 street_2       city state        zip  amount        date  candidate_id\n",
-       "0  31    Buckel      Linda              PO Box 683130           Park City    UT  840683130  4600.0  2007-08-14            20"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cursor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-01122c4274ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcontributor_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PRAGMA table_info(contributors)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# You've already done this part.  I just need to do it here b/c I haven't yet.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'''SELECT *, MAX(amount) AS max_amount FROM contributors'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cursor' is not defined"
+     ]
     }
    ],
    "source": [
     "contributor_cols = [col[1] for col in cursor.execute(\"PRAGMA table_info(contributors)\")] # You've already done this part.  I just need to do it here b/c I haven't yet.\n",
     "function = '''SELECT *, MAX(amount) AS max_amount FROM contributors'''\n",
-    "viz_tables(contributor_cols, function)"
+    "pcursor.execute(function)"
    ]
   },
   {
