exercise 19  enter the commit message for your changes. Lines starting

--- a/lectures/L11/Exercise_1.ipynb
+++ b/lectures/L11/Exercise_1.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
@@ -69,9 +71,6 @@
     }
    ],
    "source": [
-    "import math\n",
-    "R=8.314\n",
-    "T=1500\n",
     "reactionroot=elementroot.find(\"reactionData\")\n",
     "for reaction in reactionroot:\n",
     "    coefficients=reaction.find(\"rateCoeff\").find(\"Arrhenius\")\n",
